Enchancement: DX: Separate ipcMain handlers to another file, create helpers file, UX: Fix white screen flicker during app load

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 @import "tailwindcss";
 
 :root {
+  background: #27272a;
   overflow: hidden;
   overflow-y: scroll;
   scrollbar-width: none; /* firefox */
